--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
     "prettier": "^1.18.2"
   },
   "dependencies": {
