--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "mocha": "^6.2.2",
+    "jest": "^24.9.0",
     "nyc": "^14.1.1",
-    "prettier": "^1.18.2",
-    "sinon": "^7.5.0"
+    "prettier": "^1.18.2"
   },
   "dependencies": {
     "lodash": "^4.17.15",
