--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
+    "jest-extended": "^0.11.2",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2"
   },
   "dependencies": {
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "pidusage": "^2.0.17",
     "voca": "^1.4.0"
   }
